; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeAgg.c_GetAggInitVal.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeAgg.c_GetAggInitVal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @GetAggInitVal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetAggInitVal(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @getTypeInputInfo(i32 %9, i32* %5, i32* %6)
  %11 = load i32, i32* %3, align 4
  %12 = call i8* @TextDatumGetCString(i32 %11)
  store i8* %12, i8** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i8*, i8** %7, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @OidInputFunctionCall(i32 %13, i8* %14, i32 %15, i32 -1)
  store i32 %16, i32* %8, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @pfree(i8* %17)
  %19 = load i32, i32* %8, align 4
  ret i32 %19
}

declare dso_local i32 @getTypeInputInfo(i32, i32*, i32*) #1

declare dso_local i8* @TextDatumGetCString(i32) #1

declare dso_local i32 @OidInputFunctionCall(i32, i8*, i32, i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
